# ThetaMCU

./: CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake
app/Inc/: main.h
app/Src/: main.c
platform/drivers/: CMakeLists.txt
platform/drivers/Inc/: chip.h  clock.h  error.h  gpio.h
platform/drivers/Src/: chip.c  clock.c  error.c  gpio.c
platform/stm32f4wb55/: CMakeLists.txt
platform/stm32f4wb55/hal/Inc/: stm32wbxx_hal_uart.h
platform/stm32f4wb55/hal/Src/: stm32wbxx_hal_timebase_tim_template.c  stm32wbxx_hal_usart.c
platform/stm32wb55/: CMakeLists.txt
platform/stm32wb55/Include/: stm32wbxx_hal_conf.h  stm32wbxx_it.h
platform/stm32wb55/STM32WBxx_HAL_Driver/Src/: stm32wbxx_hal_uart.c
platform/stm32wb55/Src/: stm32wbxx_it.c
